--- a/src/app/pages/manage-clubs/manage-clubs.component.html
+++ b/src/app/pages/manage-clubs/manage-clubs.component.html
@@ -1,71 +1,74 @@
 <div class="box-main">
-    <app-sidebar style="display: contents;"></app-sidebar>
+  <app-sidebar style="display: contents;"></app-sidebar>
 
-    <div class="box-content">
-        @if (!isLoading) {
-        <h2>Gestion de clubes</h2>
+  <div class="box-content">
+    @if (!isLoading) {
+    <h2>Gestion de clubes</h2>
 
-        <div class="box-filters">
-            <div class="box-search-text">
-                <input [(ngModel)]="clubWanted" placeholder="Buscar club ..." type="text" class="input-search-text">
-                <span (click)="getClubs()" class="material-symbols-outlined search-btn">search</span>
-            </div>
-            <button (click)="openModalAddClub()" class="btn-add-club">Agregar club</button>
-        </div>
-
-        <table class="box-table">
-            <thead>
-                <th>
-                    Nombre de club
-                </th>
-                <th>
-                    Acciones
-                </th>
-            </thead>
-            <tbody>
-                <tr *ngFor="let request of clubs">
-                    <td>{{request.name}}</td>
-                    <td>
-                        <span (click)="openModalEditClub(request.id)"
-                            class="material-symbols-outlined icon-edit-club">edit</span>
-                        <span (click)="deleteClub(request.id)"
-                            class="material-symbols-outlined icon-delete-club">delete</span>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-        <div class="box-paginator">
-            <ng-container *ngIf="numSequence(+pagination.last_page).length<=4">
-                <div *ngFor="let page of numSequence(+pagination.last_page); index as i" class="item-paginator"
-                    [ngStyle]="{'background-color': (i+1===pagination.current_page) ? '#1B84FF' : '#fff',
-                    'color': (i+1===pagination.current_page) ? '#fff' : '#000'}"
-                    (click)="i+1!==pagination.current_page?getClubs(i+1):null">
-                    {{i+1}}
-                </div>
-            </ng-container>
-            <ng-container *ngIf="numSequence(+pagination.last_page).length>4">
-                <div *ngIf="pagination.current_page>1" class="item-paginator" [ngStyle]="{'background-color': '#fff',
-                'color': '#000'}" (click)="getClubs(pagination.current_page-1)">
-                    {{pagination.current_page-1}}
-                </div>
-                <div class="item-paginator" [ngStyle]="{'background-color': '#fff',
-                    'color': '#000'}">
-                    {{pagination.current_page}}
-                </div>
-                <div *ngIf="pagination.current_page<pagination.last_page" class="item-paginator" [ngStyle]="{'background-color': '#fff',
-                'color': '#000'}" (click)="getClubs(pagination.current_page+1)">
-                    {{pagination.current_page+1}}
-                </div>
-            </ng-container>
-        </div>
-        }
-
-        @if (isLoading){
-        <div class="general-box-loading">
-            <div *ngIf="isLoading" class="loader"></div>
-        </div>
-        }
+    <div class="box-filters">
+      <div class="box-search-text">
+        <input [(ngModel)]="clubWanted" placeholder="Buscar club ..." type="text" class="input-search-text">
+        <span (click)="getClubs()" class="material-symbols-outlined search-btn">search</span>
+      </div>
+      <button (click)="openModalAddClub()" class="btn-add-club">Agregar club</button>
     </div>
+
+    <div class="table-container">
+      <table>
+        <colgroup>
+          <col>
+          <col>
+        </colgroup>
+        <thead>
+          <th>
+            Nombre de club
+          </th>
+          <th>
+            Acciones
+          </th>
+        </thead>
+        <tbody>
+          <tr *ngFor="let request of clubs">
+            <td>{{request.name}}</td>
+            <td style="text-align: center;">
+              <span (click)="openModalEditClub(request.id)" class="material-symbols-outlined icon-edit-club">edit</span>
+              <span (click)="deleteClub(request.id)" class="material-symbols-outlined icon-delete-club">delete</span>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <div class="box-paginator">
+      <ng-container *ngIf="numSequence(+pagination.last_page).length<=4">
+        <div *ngFor="let page of numSequence(+pagination.last_page); index as i" class="item-paginator" [ngStyle]="{'background-color': (i+1===pagination.current_page) ? '#1B84FF' : '#fff',
+                    'color': (i+1===pagination.current_page) ? '#fff' : '#000'}"
+          (click)="i+1!==pagination.current_page?getClubs(i+1):null">
+          {{i+1}}
+        </div>
+      </ng-container>
+      <ng-container *ngIf="numSequence(+pagination.last_page).length>4">
+        <div *ngIf="pagination.current_page>1" class="item-paginator" [ngStyle]="{'background-color': '#fff',
+                'color': '#000'}" (click)="getClubs(pagination.current_page-1)">
+          {{pagination.current_page-1}}
+        </div>
+        <div class="item-paginator" [ngStyle]="{'background-color': '#fff',
+                    'color': '#000'}">
+          {{pagination.current_page}}
+        </div>
+        <div *ngIf="pagination.current_page<pagination.last_page" class="item-paginator" [ngStyle]="{'background-color': '#fff',
+                'color': '#000'}" (click)="getClubs(pagination.current_page+1)">
+          {{pagination.current_page+1}}
+        </div>
+      </ng-container>
+    </div>
+    }
+
+    @if (isLoading){
+    <div class="general-box-loading">
+      <div *ngIf="isLoading" class="loader"></div>
+    </div>
+    }
+  </div>
 </div>
 
 <app-modal-add-club></app-modal-add-club>
