--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -1,52 +1,58 @@
 .box-main {
-    width: 100%;
-    background: #fff;
-    height: 100vh;
+  width: 100%;
+  background: #fff;
+  height: 100vh;
 }
 
 .box-login {
-    padding: 15px;
-    box-shadow: 0px 0px 5px 1px rgb(0 0 0 / 44%);
-    width: 450px;
-    background: #fff;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
+  padding: 15px;
+  box-shadow: 0px 0px 5px 1px rgb(0 0 0 / 44%);
+  width: 450px;
+  background: #fff;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
 
 .form-login {
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
 }
 
 .btn-login {
-    color: #fff;
-    background: #000629;
-    padding: 10px 0;
-    font-size: 20px;
-    border: 0px;
-    cursor: pointer;
+  color: #fff;
+  background: #000629;
+  padding: 10px 0;
+  font-size: 20px;
+  border: 0px;
+  cursor: pointer;
 }
 
 .btn-login:disabled {
-    cursor: unset;
-    color: #fff;
-    background: #8295ff;
+  cursor: unset;
+  color: #fff;
+  background: #8295ff;
 }
 
 .title-login {
-    text-align: center;
-    font-size: 25px;
-    font-weight: bold;
+  text-align: center;
+  font-size: 25px;
+  font-weight: bold;
 }
 
 .box-singular-item {
-    flex-grow: 1;
-    display: flex;
-    flex-direction: column;
-    text-align: left;
-    gap: 5px;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  gap: 5px;
+}
+
+@media (max-width: 520px) {
+  .box-login {
+    width: 85%;
+  }
 }
