--- a/src/app/pages/manage-centro-estudios/manage-centro-estudios.component.html
+++ b/src/app/pages/manage-centro-estudios/manage-centro-estudios.component.html
@@ -1,76 +1,69 @@
 <div class="box-main">
-    <app-sidebar style="display: contents;"></app-sidebar>
+  <app-sidebar style="display: contents;"></app-sidebar>
 
-    <div class="box-content">
-        @if (!isLoading) {
-        <h2>Gestion de centro estudios</h2>
+  <div class="box-content">
+    @if (!isLoading) {
+    <h2>Gestion de centro estudios</h2>
 
-        <div class="box-filters">
-            <div class="box-search-text">
-                <input [(ngModel)]="centroWanted" placeholder="Buscar centro estudios ..." type="text"
-                    class="input-search-text">
-                <span (click)="getCentros()" class="material-symbols-outlined search-btn">search</span>
-            </div>
-            <button (click)="openModalAddCentro()" class="btn-add">Agregar centro estudios</button>
-        </div>
-
-        <table class="box-table">
-            <thead>
-                <th>
-                    Nombres
-                </th>
-                <th>
-                    Ubigeo distrito
-                </th>
-                <th>
-                    Acciones
-                </th>
-            </thead>
-            <tbody>
-                <tr *ngFor="let request of centros">
-                    <td>{{request.nombre}}</td>
-                    <td>{{request.ubigeo_distrito}}</td>
-                    <td>
-                        <span (click)="openModalEditCentro(request.id)"
-                            class="material-symbols-outlined icon-edit">edit</span>
-                        <span (click)="deleteCentro(request.id)"
-                            class="material-symbols-outlined icon-delete">delete</span>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-        <div class="box-paginator">
-            <ng-container *ngIf="numSequence(+pagination.last_page).length<=4">
-                <div *ngFor="let page of numSequence(+pagination.last_page); index as i" class="item-paginator"
-                    [ngStyle]="{'background-color': (i+1===pagination.current_page) ? '#1B84FF' : '#fff',
-                    'color': (i+1===pagination.current_page) ? '#fff' : '#000'}"
-                    (click)="i+1!==pagination.current_page?getCentros(i+1):null">
-                    {{i+1}}
-                </div>
-            </ng-container>
-            <ng-container *ngIf="numSequence(+pagination.last_page).length>4">
-                <div *ngIf="pagination.current_page>1" class="item-paginator" [ngStyle]="{'background-color': '#fff',
-                'color': '#000'}" (click)="getCentros(pagination.current_page-1)">
-                    {{pagination.current_page-1}}
-                </div>
-                <div class="item-paginator" [ngStyle]="{'background-color': '#fff',
-                    'color': '#000'}">
-                    {{pagination.current_page}}
-                </div>
-                <div *ngIf="pagination.current_page<pagination.last_page" class="item-paginator" [ngStyle]="{'background-color': '#fff',
-                'color': '#000'}" (click)="getCentros(pagination.current_page+1)">
-                    {{pagination.current_page+1}}
-                </div>
-            </ng-container>
-        </div>
-        }
-
-        @if (isLoading){
-        <div class="general-box-loading">
-            <div *ngIf="isLoading" class="loader"></div>
-        </div>
-        }
+    <div class="box-filters">
+      <div class="box-search-text">
+        <input [(ngModel)]="centroWanted" placeholder="Buscar centro estudios ..." type="text"
+          class="input-search-text">
+        <span (click)="getCentros()" class="material-symbols-outlined search-btn">search</span>
+      </div>
+      <button (click)="openModalAddCentro()" class="btn-add">Agregar centro estudios</button>
     </div>
+
+    <div class="table-container">
+      <table>
+        <thead>
+          <th>Nombres</th>
+          <th class="field-distrito">Ubigeo distrito</th>
+          <th>Acciones</th>
+        </thead>
+        <tbody>
+          <tr *ngFor="let request of centros">
+            <td>{{request.nombre}}</td>
+            <td class="field-distrito">{{request.ubigeo_distrito}}</td>
+            <td style="text-align: center;">
+              <span (click)="openModalEditCentro(request.id)" class="material-symbols-outlined icon-edit">edit</span>
+              <span (click)="deleteCentro(request.id)" class="material-symbols-outlined icon-delete">delete</span>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <div class="box-paginator">
+      <ng-container *ngIf="numSequence(+pagination.last_page).length<=4">
+        <div *ngFor="let page of numSequence(+pagination.last_page); index as i" class="item-paginator" [ngStyle]="{'background-color': (i+1===pagination.current_page) ? '#1B84FF' : '#fff',
+                    'color': (i+1===pagination.current_page) ? '#fff' : '#000'}"
+          (click)="i+1!==pagination.current_page?getCentros(i+1):null">
+          {{i+1}}
+        </div>
+      </ng-container>
+      <ng-container *ngIf="numSequence(+pagination.last_page).length>4">
+        <div *ngIf="pagination.current_page>1" class="item-paginator" [ngStyle]="{'background-color': '#fff',
+                'color': '#000'}" (click)="getCentros(pagination.current_page-1)">
+          {{pagination.current_page-1}}
+        </div>
+        <div class="item-paginator" [ngStyle]="{'background-color': '#fff',
+                    'color': '#000'}">
+          {{pagination.current_page}}
+        </div>
+        <div *ngIf="pagination.current_page<pagination.last_page" class="item-paginator" [ngStyle]="{'background-color': '#fff',
+                'color': '#000'}" (click)="getCentros(pagination.current_page+1)">
+          {{pagination.current_page+1}}
+        </div>
+      </ng-container>
+    </div>
+    }
+
+    @if (isLoading){
+    <div class="general-box-loading">
+      <div *ngIf="isLoading" class="loader"></div>
+    </div>
+    }
+  </div>
 </div>
 <app-modal-warning></app-modal-warning>
 <app-modal-add-centro-estudio></app-modal-add-centro-estudio>
