--- a/src/app/pages/manage-participant/manage-participant.component.html
+++ b/src/app/pages/manage-participant/manage-participant.component.html
@@ -1,81 +1,73 @@
 <div class="box-main">
-    <app-sidebar style="display: contents;"></app-sidebar>
+  <app-sidebar style="display: contents;"></app-sidebar>
 
-    <div class="box-content">
-        @if (!isLoading) {
-        <h2>Gestion de participantes</h2>
+  <div class="box-content">
+    @if (!isLoading) {
+    <h2>Gestion de participantes</h2>
 
-        <div class="box-filters">
-            <div class="box-search-text">
-                <input [(ngModel)]="participantWanted" placeholder="Buscar participante ..." type="text"
-                    class="input-search-text">
-                <span (click)="getParticipants()" class="material-symbols-outlined search-btn">search</span>
-            </div>
-            <button (click)="openModalAddParticipant()" class="btn-add">Agregar participante</button>
-        </div>
-
-        <table class="box-table">
-            <thead>
-                <th>
-                    Nombre de participante
-                </th>
-                <th>
-                    Dni
-                </th>
-                <th>
-                    Celular
-                </th>
-                <th>
-                    Acciones
-                </th>
-            </thead>
-            <tbody>
-                <tr *ngFor="let request of participants">
-                    <td>{{request.nombres}} {{request.apellido_paterno}} {{request.apellido_materno}}</td>
-                    <td>{{request.dni}}</td>
-                    <td>{{request.n_celular}}</td>
-                    <td>
-                        <span (click)="openModalEditParticipant(request.id)"
-                            class="material-symbols-outlined icon-edit">edit</span>
-                        <span (click)="deleteParticipant(request.id)"
-                            class="material-symbols-outlined icon-delete">delete</span>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-        <div class="box-paginator">
-            <ng-container *ngIf="numSequence(+pagination.last_page).length<=4">
-                <div *ngFor="let page of numSequence(+pagination.last_page); index as i" class="item-paginator"
-                    [ngStyle]="{'background-color': (i+1===pagination.current_page) ? '#1B84FF' : '#fff',
-                    'color': (i+1===pagination.current_page) ? '#fff' : '#000'}"
-                    (click)="i+1!==pagination.current_page?getParticipants(i+1):null">
-                    {{i+1}}
-                </div>
-            </ng-container>
-            <ng-container *ngIf="numSequence(+pagination.last_page).length>4">
-                <div *ngIf="pagination.current_page>1" class="item-paginator"
-                    [ngStyle]="{'background-color': '#fff','color': '#000'}"
-                    (click)="getParticipants(pagination.current_page-1)">
-                    {{pagination.current_page-1}}
-                </div>
-                <div class="item-paginator" [ngStyle]="{'background-color': '#fff','color': '#000'}">
-                    {{pagination.current_page}}
-                </div>
-                <div *ngIf="pagination.current_page<pagination.last_page" class="item-paginator"
-                    [ngStyle]="{'background-color': '#fff','color': '#000'}"
-                    (click)="getParticipants(pagination.current_page+1)">
-                    {{pagination.current_page+1}}
-                </div>
-            </ng-container>
-        </div>
-        }
-
-        @if (isLoading){
-        <div class="general-box-loading">
-            <div *ngIf="isLoading" class="loader"></div>
-        </div>
-        }
+    <div class="box-filters">
+      <div class="box-search-text">
+        <input [(ngModel)]="participantWanted" placeholder="Buscar participante ..." type="text"
+          class="input-search-text">
+        <span (click)="getParticipants()" class="material-symbols-outlined search-btn">search</span>
+      </div>
+      <button (click)="openModalAddParticipant()" class="btn-add">Agregar participante</button>
     </div>
+
+    <div class="table-container">
+      <table>
+        <thead>
+          <tr>
+            <th>Nombre de participante</th>
+            <th>Dni</th>
+            <th class="field-celular">Celular</th>
+            <th>Acciones</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let request of participants">
+            <td>{{request.nombres}} {{request.apellido_paterno}} {{request.apellido_materno}}</td>
+            <td>{{request.dni}}</td>
+            <td class="field-celular">{{request.n_celular}}</td>
+            <td style="text-align: center;">
+              <span (click)="openModalEditParticipant(request.id)"
+                class="material-symbols-outlined icon-edit">edit</span>
+              <span (click)="deleteParticipant(request.id)" class="material-symbols-outlined icon-delete">delete</span>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <div class="box-paginator">
+      <ng-container *ngIf="numSequence(+pagination.last_page).length<=4">
+        <div *ngFor="let page of numSequence(+pagination.last_page); index as i" class="item-paginator" [ngStyle]="{'background-color': (i+1===pagination.current_page) ? '#1B84FF' : '#fff',
+                    'color': (i+1===pagination.current_page) ? '#fff' : '#000'}"
+          (click)="i+1!==pagination.current_page?getParticipants(i+1):null">
+          {{i+1}}
+        </div>
+      </ng-container>
+      <ng-container *ngIf="numSequence(+pagination.last_page).length>4">
+        <div *ngIf="pagination.current_page>1" class="item-paginator"
+          [ngStyle]="{'background-color': '#fff','color': '#000'}" (click)="getParticipants(pagination.current_page-1)">
+          {{pagination.current_page-1}}
+        </div>
+        <div class="item-paginator" [ngStyle]="{'background-color': '#fff','color': '#000'}">
+          {{pagination.current_page}}
+        </div>
+        <div *ngIf="pagination.current_page<pagination.last_page" class="item-paginator"
+          [ngStyle]="{'background-color': '#fff','color': '#000'}" (click)="getParticipants(pagination.current_page+1)">
+          {{pagination.current_page+1}}
+        </div>
+      </ng-container>
+    </div>
+    }
+
+    @if (isLoading){
+    <div class="general-box-loading">
+      <div *ngIf="isLoading" class="loader"></div>
+    </div>
+    }
+  </div>
 </div>
 
 <app-modal-add-participant></app-modal-add-participant>
