--- a/src/app/pages/manage-request-torneo/manage-request-torneo.component.html
+++ b/src/app/pages/manage-request-torneo/manage-request-torneo.component.html
@@ -53,7 +53,7 @@
             <td class="field-centro-estudios">{{request.centro_estudios_nombre||'No asignado'}}</td>
             <td class="field-dni">{{request.participant_dni}}</td>
             <td class="field-celular">{{request.participant_n_celular}}</td>
-            <td>
+            <td style="text-align: center;">
               <a [href]="generatePdf(request.id)" target="_blank">
                 <span class="material-symbols-outlined">picture_as_pdf</span>
               </a>
