--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -12,10 +12,10 @@
     <span class="material-symbols-outlined">display_settings</span>
     Gestionar participantes
   </div>
-  <div routerLinkActive="active" class="item-menu" [routerLink]="['/manage-clubs']">
+  <!-- <div routerLinkActive="active" class="item-menu" [routerLink]="['/manage-clubs']">
     <span class="material-symbols-outlined">display_settings</span>
     Gestionar clubes
-  </div>
+  </div> -->
   <div routerLinkActive="active" class="item-menu" [routerLink]="['/manage-centro-estudios']">
     <span class="material-symbols-outlined">display_settings</span>
     Gestionar centro estudios
