--- a/src/styles.css
+++ b/src/styles.css
@@ -1,80 +1,82 @@
 /* You can add global styles to this file, and also import other style files */
 * {
-    padding: 0;
-    margin: 0;
+  padding: 0;
+  margin: 0;
 
-    font-family: "Nunito", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 400;
-    font-style: normal;
+  font-family: "Nunito", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .input-form {
-    padding: 10px 0;
+  padding: 10px 0;
 }
 
 .display-errors {
-    margin: 0;
-    width: 100%;
-    color: #DC2626;
+  margin: 0;
+  width: 100%;
+  color: #DC2626;
 }
 
 .loader {
-    aspect-ratio: 1;
-    display: grid;
-    animation: l14 4s infinite;
+  aspect-ratio: 1;
+  display: grid;
+  animation: l14 4s infinite;
 
-    width: 5rem;
-    position: absolute;
-    margin: auto;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
+  width: 5rem;
+  position: absolute;
+  margin: auto;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
 }
 
 .loader::before,
 .loader::after {
-    content: "";
-    grid-area: 1/1;
-    border: 8px solid;
-    border-radius: 50%;
-    border-color: red red #0000 #0000;
-    mix-blend-mode: darken;
-    animation: l14 1s infinite linear;
+  content: "";
+  grid-area: 1/1;
+  border: 8px solid;
+  border-radius: 50%;
+  border-color: red red #0000 #0000;
+  mix-blend-mode: darken;
+  animation: l14 1s infinite linear;
 }
 
 .loader::after {
-    border-color: #0000 #0000 blue blue;
-    animation-direction: reverse;
+  border-color: #0000 #0000 blue blue;
+  animation-direction: reverse;
 }
 
 .general-box-loading {
-    position: relative;
-    width: 100%;
-    min-height: 90vh;
+  position: relative;
+  width: 100%;
+  min-height: 90vh;
+}
+
+.table-container table tbody {
+  background-color: #fff;
 }
 
 @keyframes l14 {
-    100% {
-        transform: rotate(1turn)
-    }
+  100% {
+    transform: rotate(1turn)
+  }
 }
 
 .box-paginator {
-    width: fit-content;
-    float: right;
-    right: 20px;
-    position: relative;
-    top: 5px;
+  width: 100%;
+  position: relative;
+  height: 48px;
 }
 
 .item-paginator {
-    display: inline-block;
-    padding: 10px 15px;
-    margin: 0 2px;
-    border-radius: 50%;
-    cursor: pointer;
+  display: inline-block;
+  padding: 10px 15px;
+  margin: 0 2px;
+  border-radius: 50%;
+  cursor: pointer;
 }
 
 @media (max-width: 770px) {
